--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "axios": "^1.6.7",
+    "echarts": "^5.5.0",
     "query-string": "^8.2.0",
     "typescript-cookie": "^1.0.6",
     "vue": "^3.4.15",
