--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
   "rewrites": [
     { "source": "/(.*)", "destination": "/index.html" },
-    { "source": "/api/v2/(.*)", "destination": "https://sm.ms/api/v2/$1" }
+    { "source": "/api/v2/upload", "destination": "https://sm.ms/api/v2/upload" }
   ]
 }
